# mudev_backend

./: .gitignore  .pre-commit-config.yaml  Makefile  README-ko_kr.md  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  __main__.py
app/api/: project_route.py
app/api/playco/: __init__.py  playlist_control.py  playlist_manage.py  socketio_auth.py
app/api/tool/: __init__.py
app/api/tool/network_packet_parser/: __init__.py  packet_parser.py
app/celery/: __interface__.py
app/celery/task/: __init__.py  ytdl.py  ytdl_updater.py
app/celery_task/: __interface__.py  __main__.py
app/celery_task/task/: __init__.py  ytdl.py  ytdl_updater.py
app/cli/: __init__.py  __main__.py  db_shell.py  drop_and_create_tables.py  py_shell.py  redis_shell.py  reset_db.py
app/config/: celery.py  fastapi.py  monitor.py  project.py
app/config/route/: __init__.py  account.py
app/const/: celery.py  cookie.py  error.py  filepath.py  header.py  jwt.py  sns.py  tag.py  time.py
app/crud/: __interface__.py  file.py  ssco.py  user.py
app/database/playco/: playlist.py
app/db/: __init__.py  __mixin__.py  __type__.py
app/db/migration/: env.py  script.py.mako
app/db/migration/versions/: 2023_12_31_1515-c8edcbe8cbf0_20240101_001553.py
app/db/model/: __init__.py  file.py  ssco.py  task.py  user.py
app/dependency/: authn.py  common.py  header.py
app/error_handler/: __init__.py  __type__.py  err_default.py  err_pydantic.py  err_pyjwt.py  err_sqlalchemy.py  err_starlette.py
app/plugin/: __init__.py  microservice_support.py
app/plugin/playco/: redis_db.py  websocket.py
app/redis/: __init__.py  key_type.py
app/route/: __init__.py  authn.py  healthcheck.py  user.py
app/route/common/: file.py  healthcheck.py  signin_history.py  user.py
app/route/project/ssco/ytdl/: video.py
app/route/webhook/: routes.py  telegram.py
app/route/webhook/telegram/: ssco.py
app/schema/: file.py  jwt.py  ssco.py  user.py
app/static/template/network_packet_parser/: index.html  tool_protocol_parser.html
app/util/: elegant_pair.py  import_util.py  mu_exception.py  mu_file.py  mu_json.py  mu_pmmod.py  mu_stdlib.py  mu_string.py  mu_type.py  network.py  sqlalchemy_util.py  subprocess_util.py  time_util.py
app/util/ext_api/: docker.py  gmail.py  telegram.py  youtube.py
app/util/fastapi/: cookie.py
app/util/pydantic/: normalizer.py  with_model.py
app/util/sqlalchemy/: __init__.py
app/util/struct/: hybrid_method.py  singleton.py
infra/: Dockerfile  docker-compose-dev.yaml
infra/hooks/: build  pre_build
